updated env example

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,8 @@
 # MongoDB Connection String
-MONGODB_URI=mongodb+srv://story4uinfo:gFGG8RkzfHmP5bZz@cluster0.qikvxzr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=
 
 # JWT Secret Key (use a strong random string in production)
-JWT_SECRET=supersecret
+JWT_SECRET=
 
 # Base URL of your application (for file URLs)
 BASE_URL=http://localhost:8080/
