--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.9.28",
     "multer": "^1.4.2",
-    "node-machine-id": "^1.1.12"
+    "node-machine-id": "^1.1.12",
+    "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
